#this is file macros/Makefile.am
DOX_TAGFILES =

EXTRA_DIST=a3.m4 ac_prog_jar.m4 ac_prog_java.m4 ac_prog_java_works.m4 ac_prog_javac.m4 \
ac_prog_javac_works.m4 acx_blas.m4 acx_compile_warn.m4 acx_lapack.m4 acx_lapackpp.m4 \
acx_windows_paths.m4 altera.m4 as-scrub-include.m4 atlas.m4 ax_blas.m4 ax_cflags_gcc_option.m4 \
ax_check_compile_flag.m4 ax_lapack.m4 ax_openmp.m4 boost_base.m4 boost_filesystem.m4 \
boost_iostreams.m4 boost_program_options.m4 boost_regex.m4 boost_system.m4 boost_time.m4 \
boost_wave.m4 c++11.m4 clang_version4.m4 clang_version5.m4 clang_version6.m4 clang_version7.m4 \
clang_version8.m4 clang_version9.m4 clang_version10.m4  clang_version11.m4 codeset.m4 design_compiler.m4 gcc_version.m4 \
get_configure.sh get_target.sh gettext.m4 glibc21.m4 gsl.m4 icarus_compiler.m4 iconv.m4 \
intdiv0.m4 inttypes-pri.m4 inttypes.m4 inttypes_h.m4 lattice.m4 lcmessage.m4 lib-ld.m4 \
lib-link.m4 lib-prefix.m4 libtool.m4 linux_distribution.m4 ltoptions.m4 ltsugar.m4 ltversion.m4 \
lt~obsolete.m4 mppb.m4 nls.m4 panda_config_subdir.sh po.m4 progtest.m4 qt3.m4 qt4.m4 R.m4 \
rapidminer.m4 searchfiles.m4 stdint_h.m4 treegcc.m4 tsim.m4 uintmax_t.m4 ulonglong.m4 \
verilator_compiler.m4 w32.m4 xilinx.m4

#do not touch the following line



