#this is file scripts/Makefile.am
SUBDIRS= 
DIST_SUBDIRS=

if BUILD_LATEX_TABLE_FORMAT
   SUBDIRS += latex_table_format
   DIST_SUBDIRS += latex_table_format
endif

DOX_TAGFILES =

EXTRA_DIST = add_escape.sh characterize.py perf_diff.py test_panda.py test_installation.sh

pkgdata_DATA = characterize.py perf_diff.py test_panda.py

#do not touch the following line


