EXTRA_DIST = adpcm/adpcm.c aes/aes_enc.c\
aes/aes.c\
aes/aes.h\
aes/aes_func.c\
aes/aes_dec.c\
aes/aes_key.c\
blowfish/bf_cfb64.c\
blowfish/bf.c\
blowfish/bf_locl.h\
blowfish/bf_enc.c\
blowfish/bf_skey.c\
blowfish/bf_pi.h\
blowfish/blowfish.h\
dfadd/SPARC-GCC.h\
dfadd/dfadd.c\
dfadd/softfloat.h\
dfadd/softfloat-macros\
dfadd/softfloat.c\
dfadd/milieu.h\
dfadd/softfloat-specialize\
dfdiv/SPARC-GCC.h\
dfdiv/softfloat.h\
dfdiv/softfloat-macros\
dfdiv/softfloat.c\
dfdiv/milieu.h\
dfdiv/dfdiv.c\
dfdiv/softfloat-specialize\
dfmul/dfmul.c\
dfmul/SPARC-GCC.h\
dfmul/softfloat.h\
dfmul/softfloat-macros\
dfmul/softfloat.c\
dfmul/milieu.h\
dfmul/softfloat-specialize\
dfsin/SPARC-GCC.h\
dfsin/softfloat.h\
dfsin/dfsin.c\
dfsin/softfloat-macros\
dfsin/softfloat.c\
dfsin/milieu.h\
dfsin/softfloat-specialize\
gsm/add.c\
gsm/gsm.c\
gsm/lpc.c\
gsm/private.h\
jpeg/decode.c\
jpeg/chenidct.c\
jpeg/jfif_read.c\
jpeg/jpeg2bmp.c\
jpeg/init.h\
jpeg/huffman.c\
jpeg/marker.c\
jpeg/huffman.h\
jpeg/decode.h\
jpeg/main.c\
jpeg/global.h\
mips/mips.c\
mips/imem.h\
motion/motion.c\
motion/getvlc.h\
motion/getvlc.c\
motion/mpeg2dec.h\
motion/config.h\
motion/mpeg2.c\
motion/global.h\
motion/getbits.c\
sha/sha.h\
sha/sha.c\
sha/sha_driver.c\
README_CHSTONE.txt \
list \
5CSEMA5F31C6_10.0_O2_sdc_aligned_access.sh\
5CSEMA5F31C6_10.0_O3_sdc.sh\
5CSEMA5F31C6_15.0_O2_sdc_aligned_access.sh\
5CSEMA5F31C6_15.0_O3_sdc.sh\
5CSEMA5F31C6_O3_list \
5CSEMA5F31C6_O3_adpcm_constraints.xml \
5SGXEA7N2F45C1_05.0_O2_sdc_aligned_access.sh\
5SGXEA7N2F45C1_05.0_O3_sdc.sh\
5SGXEA7N2F45C1_10.0_O2_sdc_aligned_access.sh\
5SGXEA7N2F45C1_10.0_O3_sdc.sh\
all.sh\
altera.sh\
bambu_dfadd_sdc.sh\
EP2C70F896C6-R_10.0_O2_sdc_aligned_access.sh\
EP2C70F896C6-R_10.0_O3_sdc.sh\
EP2C70F896C6-R_15.0_O2_sdc_aligned_access.sh\
EP2C70F896C6-R_15.0_O3_sdc.sh\
EP2C70F896C6-R_O3_adpcm_constraints.xml \
EP2C70F896C6-R_O3_list\
xc7vx330t-1ffg1157_10.0_O2_sdc_aligned_access.sh\
xc7vx330t-1ffg1157_10.0_O3_sdc.sh\
xc7vx690t-3ffg1930-VVD_05.0_O2_sdc_aligned_access.sh\
xc7vx690t-3ffg1930-VVD_05.0_O3_sdc.sh\
xc7vx690t-3ffg1930-VVD_10.0_O2_sdc_aligned_access.sh\
xc7vx690t-3ffg1930-VVD_10.0_O3_sdc.sh\
xc7z020-1clg484-VVD_10.0_O2_sdc_aligned_access.sh\
xc7z020-1clg484-VVD_10.0_O3_sdc.sh\
xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_access.sh\
xc7z020-1clg484-VVD_15.0_O3_sdc.sh\
xilinx.sh\
LFE335EA8FN484C_15.0_O2_sdc_aligned_access.sh \
LFE335EA8FN484C_15.0_O3_sdc.sh \
lattice.sh \
lattice_ECP3_list \
ECP3_CHStone_constraints/adpcm_constraints.xml \
ECP3_CHStone_constraints/dfdiv_hls_div_constraints.xml \
ECP3_CHStone_constraints/dfsin_hls_div_constraints.xml \
ECP3_CHStone_constraints/jpeg_constraints.xml\
CHStone_5CSEMA5F31C6_10.0_O2_sdc_aligned_access.tex\
CHStone_5CSEMA5F31C6_10.0_O3_sdc.tex\
CHStone_5CSEMA5F31C6_15.0_O2_sdc_aligned_access.tex\
CHStone_5CSEMA5F31C6_15.0_O3_sdc.tex\
CHStone_5SGXEA7N2F45C1_05.0_O2_sdc_aligned_access.tex\
CHStone_5SGXEA7N2F45C1_05.0_O3_sdc.tex\
CHStone_5SGXEA7N2F45C1_10.0_O2_sdc_aligned_access.tex\
CHStone_5SGXEA7N2F45C1_10.0_O3_sdc.tex\
CHStone_EP2C70F896C6-R_10.0_O2_sdc_aligned_access.tex\
CHStone_EP2C70F896C6-R_10.0_O3_sdc.tex\
CHStone_EP2C70F896C6-R_15.0_O2_sdc_aligned_access.tex\
CHStone_EP2C70F896C6-R_15.0_O3_sdc.tex\
CHStone_LFE335EA8FN484C_15.0_O2_sdc_aligned_access.tex\
CHStone_LFE335EA8FN484C_15.0_O3_sdc.tex\
CHStone_xc7vx330t-1ffg1157_10.0_O2_sdc_aligned_access.tex\
CHStone_xc7vx330t-1ffg1157_10.0_O3_sdc.tex\
CHStone_xc7vx690t-3ffg1930-VVD_05.0_O2_sdc_aligned_access.tex\
CHStone_xc7vx690t-3ffg1930-VVD_05.0_O3_sdc.tex\
CHStone_xc7vx690t-3ffg1930-VVD_10.0_O2_sdc_aligned_access.tex\
CHStone_xc7vx690t-3ffg1930-VVD_10.0_O3_sdc.tex\
CHStone_xc7z020-1clg484-VVD_10.0_O2_sdc_aligned_access.tex\
CHStone_xc7z020-1clg484-VVD_10.0_O3_sdc.tex\
CHStone_xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_access.tex\
CHStone_xc7z020-1clg484-VVD_15.0_O3_sdc.tex\
xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_accessClang4.sh\
xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_accessClang5.sh\
xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_accessClang6.sh\
CHStone_xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_accessClang4.tex\
CHStone_xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_accessClang5.tex\
CHStone_xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_accessClang6.tex\
xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_accessGCC5.sh\
xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_accessGCC6.sh\
xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_accessGCC7.sh\
xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_accessGCC8.sh\
CHStone_xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_accessGCC5.tex\
CHStone_xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_accessGCC6.tex\
CHStone_xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_accessGCC7.tex\
CHStone_xc7z020-1clg484-VVD_15.0_O2_sdc_aligned_accessGCC8.tex
#do not touch the following line


TESTS = \
   bambu_dfadd_sdc.sh



