EXTRA_DIST = \
./backprop\
./backprop/backprop\
./backprop/backprop/input.data\
./backprop/backprop/generate.c\
./backprop/backprop/net_dir\
./backprop/backprop/check.data\
./backprop/backprop/net.c\
./backprop/backprop/hls.tcl\
./backprop/backprop/net.h\
./Makefile.am\
./machsuite_bench_list\
./fft\
./fft/strided\
./fft/strided/fft.h\
./fft/strided/input.data\
./fft/strided/generate.c\
./fft/strided/fft_dir\
./fft/strided/fft_test.c\
./fft/strided/fft.c\
./fft/strided/check.data\
./fft/strided/hls.tcl\
./fft/transpose\
./fft/transpose/fft.h\
./fft/transpose/input.data\
./fft/transpose/generate.c\
./fft/transpose/fft_dir\
./fft/transpose/fft_test.c\
./fft/transpose/fft.c\
./fft/transpose/check.data\
./fft/transpose/hls.tcl\
./spmv\
./spmv/ellpack\
./spmv/ellpack/input.data\
./spmv/ellpack/generate.c\
./spmv/ellpack/ellpack.h\
./spmv/ellpack/494_bus_full.mtx\
./spmv/ellpack/ellpack.c\
./spmv/ellpack/ellpack_dir\
./spmv/ellpack/494_bus.mtx\
./spmv/ellpack/check.data\
./spmv/ellpack/ellpack_test.c\
./spmv/ellpack/hls.tcl\
./spmv/crs\
./spmv/crs/input.data\
./spmv/crs/crs_test.c\
./spmv/crs/generate.c\
./spmv/crs/crs_dir\
./spmv/crs/symmetry.py\
./spmv/crs/494_bus_full.mtx\
./spmv/crs/crs.h\
./spmv/crs/494_bus.mtx\
./spmv/crs/check.data\
./spmv/crs/crs.c\
./spmv/crs/hls.tcl\
./gemm\
./gemm/ncubed\
./gemm/ncubed/input.data\
./gemm/ncubed/generate.c\
./gemm/ncubed/gemm.h\
./gemm/ncubed/gemm_dir\
./gemm/ncubed/check.data\
./gemm/ncubed/gemm.c\
./gemm/ncubed/hls.tcl\
./gemm/blocked\
./gemm/blocked/input.data\
./gemm/blocked/generate.c\
./gemm/blocked/bbgemm.c\
./gemm/blocked/bbgemm.h\
./gemm/blocked/check.data\
./gemm/blocked/bbgemm_dir\
./gemm/blocked/hls.tcl\
./viterbi\
./viterbi/viterbi\
./viterbi/viterbi/input.data\
./viterbi/viterbi/generate.c\
./viterbi/viterbi/viterbi_test.c\
./viterbi/viterbi/viterbi_dir\
./viterbi/viterbi/viterbi.h\
./viterbi/viterbi/check.data\
./viterbi/viterbi/viterbi.c\
./viterbi/viterbi/hls.tcl\
./README.md\
./md\
./md/knn\
./md/knn/input.data\
./md/knn/generate.c\
./md/knn/md_kernel_test.c\
./md/knn/knn_dir\
./md/knn/md.c\
./md/knn/point_stats.py\
./md/knn/check.data\
./md/knn/md.h\
./md/knn/hls.tcl\
./md/grid\
./md/grid/input.data\
./md/grid/generate.c\
./md/grid/md.c\
./md/grid/check.data\
./md/grid/md.h\
./md/grid/grid_dir\
./md/grid/hls.tcl\
./LICENSE\
./nw\
./nw/nw\
./nw/nw/input.data\
./nw/nw/generate.c\
./nw/nw/needwun.h\
./nw/nw/needwun.c\
./nw/nw/check.data\
./nw/nw/nw_dir\
./nw/nw/needwun_test.c\
./nw/nw/hls.tcl\
./sort\
./sort/merge\
./sort/merge/input.data\
./sort/merge/generate.c\
./sort/merge/merge.h\
./sort/merge/merge.c\
./sort/merge/check.data\
./sort/merge/hls.tcl\
./sort/merge/merge_dir\
./sort/radix\
./sort/radix/input.data\
./sort/radix/generate.c\
./sort/radix/radix.h\
./sort/radix/radix.c\
./sort/radix/check.data\
./sort/radix/inline_dir\
./sort/radix/hls.tcl\
./sort/radix/radix_dir\
./kmp\
./kmp/kmp\
./kmp/kmp/input.data\
./kmp/kmp/generate.c\
./kmp/kmp/kmp_test.c\
./kmp/kmp/TR.h\
./kmp/kmp/kmp_dir\
./kmp/kmp/TR.txt\
./kmp/kmp/check.data\
./kmp/kmp/kmp.c\
./kmp/kmp/hls.tcl\
./kmp/kmp/kmp.h\
./aes\
./aes/aes\
./aes/aes/input.data\
./aes/aes/aes.h\
./aes/aes/generate.c\
./aes/aes/aes_dir\
./aes/aes/check.data\
./aes/aes/hls.tcl\
./aes/aes/aes.c\
./aes/aes/aes_test.c\
./common\
./common/harness.c\
./stencil\
./stencil/stencil2d\
./stencil/stencil2d/input.data\
./stencil/stencil2d/generate.c\
./stencil/stencil2d/stencil_dir\
./stencil/stencil2d/check.data\
./stencil/stencil2d/stencil.h\
./stencil/stencil2d/hls.tcl\
./stencil/stencil2d/stencil.c\
./stencil/stencil3d\
./stencil/stencil3d/input.data\
./stencil/stencil3d/generate.c\
./stencil/stencil3d/stencil3d.h\
./stencil/stencil3d/stencil3d_dir\
./stencil/stencil3d/check.data\
./stencil/stencil3d/hls.tcl\
./stencil/stencil3d/stencil3d.c\
./templates\
./templates/generate_template.c\
./templates/Makefile_template\
./templates/harness_interface_template.h\
./bfs\
./bfs/queue\
./bfs/queue/input.data\
./bfs/queue/generate.c\
./bfs/queue/queue.c\
./bfs/queue/queue.h\
./bfs/queue/check.data\
./bfs/queue/hls.tcl\
./bfs/queue/queue_dir\
./bfs/bulk\
./bfs/bulk/input.data\
./bfs/bulk/matspy.py\
./bfs/bulk/generate.c\
./bfs/bulk/bulk.h\
./bfs/bulk/bulk_dir\
./bfs/bulk/bulk.c\
./bfs/bulk/check.data\
./bfs/bulk/hls.tcl \
all.sh \
xc7vx690t-3ffg1930-VVD_10.0_O2_sdc_hls_div.sh \
MachSuite_xc7vx690t-3ffg1930-VVD_10.0_O2_sdc_hls_div.tex
