EXTRA_DIST = constraints_STD.xml  COPYING  DE1-characterization-file.xml  delay.c  Documentation/Documentation_EN.txt Documentation/Schematics/Vga_adapter_Schematics.png  Makefile.am  DE1_pin_assignments.qsf  PLOT_IPs.xml  script.sh  vgatest.c synthesize.sh leds_ctrl.c leds_ctrl.v plot.c plot.v DE1_design.sdc

#do not touch the following line
include $(top_srcdir)/panda.am
TESTS=synthesize.sh
