EXTRA_DIST = btn_ctrl.c btn_ctrl.h btn_ctrl.v constraints_STD.xml COPYING delay.c delay.h delay.v IPs.xml leds_ctrl.c leds_ctrl.h leds_ctrl.v Nexys4_Master.sdc plot.c plot.h\
             plot.v program_NEXYS4.sh program_nexys4.tcl sw_ctrl.c sw_ctrl.h sw_ctrl.v synthesize_NEXYS4.sh vgatest.c README.txt

#do not touch the following line
include $(top_srcdir)/panda.am
TESTS=synthesize_NEXYS4.sh

