EXTRA_DIST = \
   bambu_altera.sh \
   bambu_lattice.sh \
   bambu_xilinx.sh \
   constraints_STD.xml \
   module.c \
   README.txt \
   test.xml \
   constrained_synth_altera.sh \
   unconstrained_synth_altera.sh \
   constrained_synth_altera_5.sh \
   unconstrained_synth_altera_5.sh \
   constrained_synth_lattice.sh \
   unconstrained_synth_lattice.sh \
   constrained_synth_xilinx_zynq_vvd.sh \
   unconstrained_synth_xilinx_zynq_vvd.sh \
   constrained_synth_xilinx_zynq_ise.sh \
   unconstrained_synth_xilinx_zynq_ise.sh \
   constrained_synth_xilinx_vx7330_ise.sh \
   unconstrained_synth_xilinx_vx7330_ise.sh \
   constrained_synth_xilinx_v6_ise.sh \
   unconstrained_synth_xilinx_v6_ise.sh \
   constrained_synth_xilinx_v550_ise.sh \
   unconstrained_synth_xilinx_v550_ise.sh \
   constrained_synth_xilinx_v5330_ise.sh \
   unconstrained_synth_xilinx_v5330_ise.sh \
   constrained_synth_xilinx_v5110_ise.sh \
   unconstrained_synth_xilinx_v5110_ise.sh \
   constrained_synth_xilinx_vc707_vvd.sh \
   unconstrained_synth_xilinx_vc707_vvd.sh \
   constrained_synth_xilinx_vx690t_vvd.sh \
   unconstrained_synth_xilinx_vx690t_vvd.sh \
   constrained_synth_xilinx_artix7_vvd.sh \
   unconstrained_synth_xilinx_artix7_vvd.sh \
   constrained_synth_altera_cyclone5.sh \
   unconstrained_synth_altera_cyclone5.sh \
   constrained_synth_altera_stratix4.sh \
   unconstrained_synth_altera_stratix4.sh \
   constrained_synth_altera_stratix5.sh \
   unconstrained_synth_altera_stratix5.sh

#do not touch the following line
include $(top_srcdir)/panda.am
TESTS = \
   constrained_synth_altera.sh \
   unconstrained_synth_altera.sh \
   constrained_synth_altera_5.sh \
   unconstrained_synth_altera_5.sh \
   constrained_synth_altera_cyclone5.sh \
   unconstrained_synth_altera_cyclone5.sh \
   constrained_synth_altera_stratix4.sh \
   unconstrained_synth_altera_stratix4.sh \
   constrained_synth_altera_stratix5.sh \
   unconstrained_synth_altera_stratix5.sh \
   constrained_synth_lattice.sh \
   unconstrained_synth_lattice.sh \
   constrained_synth_xilinx_zynq_vvd.sh \
   unconstrained_synth_xilinx_zynq_vvd.sh \
   constrained_synth_xilinx_zynq_ise.sh \
   unconstrained_synth_xilinx_zynq_ise.sh \
   constrained_synth_xilinx_vx7330_ise.sh \
   unconstrained_synth_xilinx_vx7330_ise.sh \
   constrained_synth_xilinx_v6_ise.sh \
   unconstrained_synth_xilinx_v6_ise.sh \
   constrained_synth_xilinx_v550_ise.sh \
   unconstrained_synth_xilinx_v550_ise.sh \
   constrained_synth_xilinx_v5330_ise.sh \
   unconstrained_synth_xilinx_v5330_ise.sh \
   constrained_synth_xilinx_v5110_ise.sh \
   unconstrained_synth_xilinx_v5110_ise.sh \
   constrained_synth_xilinx_vc707_vvd.sh \
   unconstrained_synth_xilinx_vc707_vvd.sh \
   constrained_synth_xilinx_vx690t_vvd.sh \
   unconstrained_synth_xilinx_vx690t_vvd.sh \
   constrained_synth_xilinx_artix7_vvd.sh \
   unconstrained_synth_xilinx_artix7_vvd.sh 
