EXTRA_DIST = README.txt \
             gcd_example/bambu.sh gcd_example/gcd.cc gcd_example/test.xml\
             fir_filter/bambu.sh fir_filter/coef1.cpp fir_filter/input.pcm fir_filter/outputFixed.gold.pcm fir_filter/test.xml \
             Xilinx_Examples/Math/fp_accum/3_FP_accum.pdf Xilinx_Examples/Math/fp_accum/bambu.sh Xilinx_Examples/Math/fp_accum/CONTRIBUTING.md Xilinx_Examples/Math/fp_accum/fp_accum.cpp Xilinx_Examples/Math/fp_accum/LICENSE.md Xilinx_Examples/Math/fp_accum/README.md Xilinx_Examples/Math/fp_accum/run_3_FP_accum_script.tcl


#do not touch the following line

TESTS=gcd_example/bambu.sh fir_filter/bambu.sh Xilinx_Examples/Math/fp_accum/bambu.sh
