EXTRA_DIST = README.txt \
             gcd_example/bambu.sh gcd_example/gcd.cc gcd_example/test.xml\
             fir_filter/bambu.sh fir_filter/coef1.cpp fir_filter/input.pcm fir_filter/outputFixed.gold.pcm fir_filter/test.xml \
             Xilinx_Examples/Math/fp_accum/3_FP_accum.pdf Xilinx_Examples/Math/fp_accum/bambu.sh Xilinx_Examples/Math/fp_accum/CONTRIBUTING.md Xilinx_Examples/Math/fp_accum/fp_accum.cpp Xilinx_Examples/Math/fp_accum/LICENSE.md Xilinx_Examples/Math/fp_accum/README.md Xilinx_Examples/Math/fp_accum/run_3_FP_accum_script.tcl \
             atan2_cordic/CONTRIBUTING.md atan2_cordic/LICENSE.md atan2_cordic/README.md atan2_cordic/cordic.h atan2_cordic/cordic_atan2.cpp atan2_cordic/9a_cordic_atan2.pdf atan2_cordic/run_atan2_hls_script.tcl atan2_cordic/cordic_test.cpp atan2_cordic/read_file.h atan2_cordic/M/cpf_atan2_data.txt atan2_cordic/M/db_cordic_atan2.m atan2_cordic/M/short_cpf_atan2.m atan2_cordic/M/cpf_atan2.m atan2_cordic/test_data/input_data.txt atan2_cordic/test_data/ref_results.txt atan2_cordic/test_data/vector.dat atan2_cordic/test_data/check_res.m atan2_cordic/bambu.sh \
             squared_difference_accumulate/CONTRIBUTING.md squared_difference_accumulate/tb squared_difference_accumulate/tb/diff_sq_acc_tb.cpp squared_difference_accumulate/LICENSE.md squared_difference_accumulate/README.md squared_difference_accumulate/run.tcl squared_difference_accumulate/src squared_difference_accumulate/src/diff_sq_acc.h squared_difference_accumulate/src/diff_sq_acc.cpp squared_difference_accumulate/bambu.sh




#do not touch the following line

TESTS=gcd_example/bambu.sh fir_filter/bambu.sh Xilinx_Examples/Math/fp_accum/bambu.sh squared_difference_accumulate/bambu.sh
