EXTRA_DIST = spec.c \
             bambu_altera.sh bambu_altera_N1.sh bambu_altera_NN.sh \
             bambu_lattice.sh bambu_lattice_N1.sh bambu_lattice_NN.sh \
             bambu_xilinx.sh bambu_xilinx_N1.sh bambu_xilinx_NN.sh \
             bambu_yosys.sh bambu_yosys_N1.sh bambu_yosys_NN.sh\
             test_icrc.xml  test.xml README.txt

#do not touch the following line

