EXTRA_DIST= \
  Keccak.c \
  keccak_CycloneII_10ns.sh \
  keccak_CycloneII_5ns.sh \
  keccak_ECP3_9ns.sh \
  keccak_V5_4ns.sh \
  keccak_V7_2ns.sh \
  test.xml \
  multi.sh \
  multi-keccak/autogen.sh \
  multi-keccak/configure.ac \
  multi-keccak/Makefile.am \
  multi-keccak/test.xml \
  multi-keccak/include/Keccak.h \
  multi-keccak/include/Makefile.am \
  multi-keccak/src/keccak_coproc.c \
  multi-keccak/src/Makefile.am \
  multi-keccak/src/chi/chi.c \
  multi-keccak/src/chi/Makefile.am \
  multi-keccak/src/iota/iota.c \
  multi-keccak/src/iota/Makefile.am \
  multi-keccak/src/pi/Makefile.am \
  multi-keccak/src/pi/pi.c \
  multi-keccak/src/rho/Makefile.am \
  multi-keccak/src/rho/rho.c \
  multi-keccak/src/theta/Makefile.am \
  multi-keccak/src/theta/theta.c\
  README.txt

#do not touch the following line


TESTS=multi.sh keccak_CycloneII_10ns.sh keccak_CycloneII_5ns.sh keccak_ECP3_9ns.sh keccak_V5_4ns.sh keccak_V7_2ns.sh
