EXTRA_DIST = ./mcml/fixedptc.h \
./mcml/fixedptc.c \
./mcml/tiny_fixed.h \
./mcml/tiny_fixed.c\
./blackscholes/main.c \
./blackscholes/fixedptc.h \
./blackscholes/fixedptc.c \
./blackscholes/black_scholes.h \
./blackscholes/black_scholes.c \
./los/los.c \
./los/los.h \
./mandelbrot/mandelbrot.c \
./tests.sh \
./hash/hash.c \
./hash/hash.h \
./dfdiv/milieu.h \
./dfdiv/dfdiv.c \
./dfdiv/softfloat-macros \
./dfdiv/softfloat.c \
./dfdiv/SPARC-GCC.h \
./dfdiv/softfloat.h \
./dfdiv/softfloat-specialize \
./dfsin/dfsin.c \
./dfsin/milieu.h \
./dfsin/softfloat-macros \
./dfsin/softfloat.c \
./dfsin/SPARC-GCC.h \
./dfsin/softfloat.h \
./dfsin/softfloat-specialize \
./test_list


