SUBDIRS = bsearch_glibc  bsearch_musl  bsearch_newlib  bsearch_uclibc  filtering_pipeline  qsort_glibc  qsort_musl  qsort_uclibc  simple_raytrace
DIST_SUBDIRS = bsearch_glibc  bsearch_musl  bsearch_newlib  bsearch_uclibc  filtering_pipeline  qsort_glibc  qsort_musl  qsort_uclibc  simple_raytrace

EXTRA_DIST = bambu.sh  filtering_pipeline.sh function_pointers.sh  list  list_pipeline

#do not touch the following line

TESTS=bambu.sh

