EXTRA_DIST = \
./all.sh\
./latex_format_bambu_results_altera_sim.xml\
./dfdiv\
./dfdiv/optimized\
./dfdiv/optimized/softfloat.h\
./dfdiv/optimized/softfloat-specialize\
./dfdiv/optimized/SPARC-GCC.h\
./dfdiv/optimized/float64_div.xml\
./dfdiv/optimized/dfdiv.c\
./dfdiv/optimized/softfloat-macros\
./dfdiv/optimized/softfloat.c\
./dfdiv/optimized/milieu.h\
./dfdiv/not-optimized\
./dfdiv/not-optimized/softfloat.h\
./dfdiv/not-optimized/softfloat-specialize\
./dfdiv/not-optimized/SPARC-GCC.h\
./dfdiv/not-optimized/float64_div.xml\
./dfdiv/not-optimized/dfdiv.c\
./dfdiv/not-optimized/softfloat-macros\
./dfdiv/not-optimized/softfloat.c\
./dfdiv/not-optimized/milieu.h\
./aes_encrypt\
./aes_encrypt/optimized\
./aes_encrypt/optimized/aes.h\
./aes_encrypt/optimized/aes_dec.c\
./aes_encrypt/optimized/main.xml\
./aes_encrypt/optimized/aes_key.c\
./aes_encrypt/optimized/aes_enc.c\
./aes_encrypt/optimized/aes.c\
./aes_encrypt/optimized/aes_func.c\
./aes_encrypt/not-optimized\
./aes_encrypt/not-optimized/aes.h\
./aes_encrypt/not-optimized/aes_dec.c\
./aes_encrypt/not-optimized/main.xml\
./aes_encrypt/not-optimized/aes_key.c\
./aes_encrypt/not-optimized/aes_enc.c\
./aes_encrypt/not-optimized/aes.c\
./aes_encrypt/not-optimized/aes_func.c\
./latex_format_bambu_results_xilinx_sim.xml\
./mm\
./mm/optimized\
./mm/optimized/module.h\
./mm/optimized/test.xml\
./mm/optimized/module.c\
./mm/not-optimized\
./mm/not-optimized/module.h\
./mm/not-optimized/tb.c\
./mm/not-optimized/test.xml\
./mm/not-optimized/module.c\
./Makefile.am\
./dfmul\
./dfmul/optimized\
./dfmul/optimized/softfloat.h\
./dfmul/optimized/softfloat-specialize\
./dfmul/optimized/SPARC-GCC.h\
./dfmul/optimized/float64_mul.xml\
./dfmul/optimized/dfmul.c\
./dfmul/optimized/softfloat-macros\
./dfmul/optimized/softfloat.c\
./dfmul/optimized/milieu.h\
./dfmul/not-optimized\
./dfmul/not-optimized/softfloat.h\
./dfmul/not-optimized/softfloat-specialize\
./dfmul/not-optimized/SPARC-GCC.h\
./dfmul/not-optimized/float64_mul.xml\
./dfmul/not-optimized/dfmul.c\
./dfmul/not-optimized/softfloat-macros\
./dfmul/not-optimized/softfloat.c\
./dfmul/not-optimized/milieu.h\
./dfadd\
./dfadd/optimized\
./dfadd/optimized/dfadd.c\
./dfadd/optimized/softfloat.h\
./dfadd/optimized/softfloat-specialize\
./dfadd/optimized/SPARC-GCC.h\
./dfadd/optimized/float64_add.xml\
./dfadd/optimized/softfloat-macros\
./dfadd/optimized/softfloat.c\
./dfadd/optimized/milieu.h\
./dfadd/not-optimized\
./dfadd/not-optimized/dfadd.c\
./dfadd/not-optimized/softfloat.h\
./dfadd/not-optimized/softfloat-specialize\
./dfadd/not-optimized/SPARC-GCC.h\
./dfadd/not-optimized/float64_add.xml\
./dfadd/not-optimized/softfloat-macros\
./dfadd/not-optimized/softfloat.c\
./dfadd/not-optimized/milieu.h\
./latex_format_bambu_results_altera_synth.xml\
./jpeg\
./jpeg/optimized\
./jpeg/optimized/main.c\
./jpeg/optimized/chenidct.c\
./jpeg/optimized/marker.c\
./jpeg/optimized/decode.c\
./jpeg/optimized/jpeg2bmp.c\
./jpeg/optimized/global.h\
./jpeg/optimized/decode.h\
./jpeg/optimized/jpeg2bmp_main.xml\
./jpeg/optimized/jfif_read.c\
./jpeg/optimized/huffman.c\
./jpeg/optimized/init.h\
./jpeg/optimized/huffman.h\
./jpeg/not-optimized\
./jpeg/not-optimized/main.c\
./jpeg/not-optimized/chenidct.c\
./jpeg/not-optimized/marker.c\
./jpeg/not-optimized/decode.c\
./jpeg/not-optimized/jpeg2bmp.c\
./jpeg/not-optimized/global.h\
./jpeg/not-optimized/decode.h\
./jpeg/not-optimized/jpeg2bmp_main.xml\
./jpeg/not-optimized/jfif_read.c\
./jpeg/not-optimized/huffman.c\
./jpeg/not-optimized/init.h\
./jpeg/not-optimized/huffman.h\
./mips\
./mips/optimized\
./mips/optimized/imem.h\
./mips/optimized/main.xml\
./mips/optimized/mips.c\
./mips/not-optimized\
./mips/not-optimized/imem.h\
./mips/not-optimized/main.xml\
./mips/not-optimized/mips.c\
./mm_constraints.xml\
./gsm_constraints.xml\
./bellmanford\
./bellmanford/optimized\
./bellmanford/optimized/bellmanford.c\
./bellmanford/optimized/test_ext_dataset.xml\
./bellmanford/optimized/test.xml\
./bellmanford/not-optimized\
./bellmanford/not-optimized/bellmanford.c\
./bellmanford/not-optimized/test_ext_dataset.xml\
./bellmanford/not-optimized/test.xml\
./list\
./list-VVD-def\
./adpcm_encode\
./adpcm_encode/optimized\
./adpcm_encode/optimized/adpcm.c\
./adpcm_encode/optimized/encode.xml\
./adpcm_encode/not-optimized\
./adpcm_encode/not-optimized/adpcm.c\
./adpcm_encode/not-optimized/encode.xml\
./dfsin\
./dfsin/optimized\
./dfsin/optimized/local_sin.xml\
./dfsin/optimized/softfloat.h\
./dfsin/optimized/softfloat-specialize\
./dfsin/optimized/SPARC-GCC.h\
./dfsin/optimized/dfsin.c\
./dfsin/optimized/softfloat-macros\
./dfsin/optimized/softfloat.c\
./dfsin/optimized/milieu.h\
./dfsin/not-optimized\
./dfsin/not-optimized/local_sin.xml\
./dfsin/not-optimized/softfloat.h\
./dfsin/not-optimized/softfloat-specialize\
./dfsin/not-optimized/SPARC-GCC.h\
./dfsin/not-optimized/dfsin.c\
./dfsin/not-optimized/softfloat-macros\
./dfsin/not-optimized/softfloat.c\
./dfsin/not-optimized/milieu.h\
./motion\
./motion/optimized\
./motion/optimized/motion.c\
./motion/optimized/config.h\
./motion/optimized/mpeg2.c\
./motion/optimized/mpeg2dec.h\
./motion/optimized/main.xml\
./motion/optimized/getbits.c\
./motion/optimized/getvlc.h\
./motion/optimized/global.h\
./motion/optimized/getvlc.c\
./motion/not-optimized\
./motion/not-optimized/motion.c\
./motion/not-optimized/config.h\
./motion/not-optimized/mpeg2.c\
./motion/not-optimized/mpeg2dec.h\
./motion/not-optimized/main.xml\
./motion/not-optimized/getbits.c\
./motion/not-optimized/getvlc.h\
./motion/not-optimized/global.h\
./motion/not-optimized/getvlc.c\
./blowfish-BF_cfb64_encrypt\
./blowfish-BF_cfb64_encrypt/optimized-area\
./blowfish-BF_cfb64_encrypt/optimized-area/bf_locl.h\
./blowfish-BF_cfb64_encrypt/optimized-area/bf_skey.c\
./blowfish-BF_cfb64_encrypt/optimized-area/main.xml\
./blowfish-BF_cfb64_encrypt/optimized-area/blowfish.h\
./blowfish-BF_cfb64_encrypt/optimized-area/bf_cfb64.c\
./blowfish-BF_cfb64_encrypt/optimized-area/bf.c\
./blowfish-BF_cfb64_encrypt/optimized-area/bf_pi.h\
./blowfish-BF_cfb64_encrypt/optimized-area/bf_enc.c\
./blowfish-BF_cfb64_encrypt/optimized\
./blowfish-BF_cfb64_encrypt/optimized/bf_locl.h\
./blowfish-BF_cfb64_encrypt/optimized/bf_skey.c\
./blowfish-BF_cfb64_encrypt/optimized/main.xml\
./blowfish-BF_cfb64_encrypt/optimized/blowfish.h\
./blowfish-BF_cfb64_encrypt/optimized/bf_cfb64.c\
./blowfish-BF_cfb64_encrypt/optimized/bf.c\
./blowfish-BF_cfb64_encrypt/optimized/bf_pi.h\
./blowfish-BF_cfb64_encrypt/optimized/bf_enc.c\
./blowfish-BF_cfb64_encrypt/not-optimized\
./blowfish-BF_cfb64_encrypt/not-optimized/bf_locl.h\
./blowfish-BF_cfb64_encrypt/not-optimized/bf_skey.c\
./blowfish-BF_cfb64_encrypt/not-optimized/main.xml\
./blowfish-BF_cfb64_encrypt/not-optimized/blowfish.h\
./blowfish-BF_cfb64_encrypt/not-optimized/bf_cfb64.c\
./blowfish-BF_cfb64_encrypt/not-optimized/bf.c\
./blowfish-BF_cfb64_encrypt/not-optimized/bf_pi.h\
./blowfish-BF_cfb64_encrypt/not-optimized/bf_enc.c\
./sobel\
./sobel/sobel-legup\
./sobel/sobel-legup/sobel.c\
./sobel/sobel-legup/test.xml\
./sobel/sobel-legup2\
./sobel/sobel-legup2/sobel.c\
./sobel/sobel-legup2/test.xml\
./sobel/optimized\
./sobel/optimized/sobel.c\
./sobel/optimized/test.xml\
./sobel/not-optimized\
./sobel/not-optimized/sobel.c\
./sobel/not-optimized/test.xml\
./latex_format_bambu_results_xilinx_synth.xml\
./sha\
./sha/optimized\
./sha/optimized/sha.c\
./sha/optimized/sha_driver.c\
./sha/optimized/main.xml\
./sha/optimized/sha.h\
./sha/not-optimized\
./sha/not-optimized/sha.c\
./sha/not-optimized/sha_driver.c\
./sha/not-optimized/main.xml\
./sha/not-optimized/sha.h\
./gsm\
./gsm/optimized\
./gsm/optimized/Gsm_LPC_Analysis.xml\
./gsm/optimized/add.c\
./gsm/optimized/private.h\
./gsm/optimized/lpc.c\
./gsm/optimized/gsm.c\
./gsm/not-optimized\
./gsm/not-optimized/Gsm_LPC_Analysis.xml\
./gsm/not-optimized/add.c\
./gsm/not-optimized/private.h\
./gsm/not-optimized/lpc.c\
./gsm/not-optimized/gsm.c\
./.gitignore\
./satd\
./satd/optimized\
./satd/optimized/main.c\
./satd/optimized/test.xml\
./satd/not-optimized\
./satd/not-optimized/main.c\
./satd/not-optimized/test.xml\
./aes_decrypt\
./aes_decrypt/optimized\
./aes_decrypt/optimized/aes.h\
./aes_decrypt/optimized/aes_dec.c\
./aes_decrypt/optimized/bambu_ver.sh\
./aes_decrypt/optimized/aes_key.c\
./aes_decrypt/optimized/aes_enc.c\
./aes_decrypt/optimized/decrypt.xml\
./aes_decrypt/optimized/aes.c\
./aes_decrypt/optimized/aes_func.c\
./aes_decrypt/not-optimized\
./aes_decrypt/not-optimized/aes.h\
./aes_decrypt/not-optimized/aes_dec.c\
./aes_decrypt/not-optimized/aes_key.c\
./aes_decrypt/not-optimized/aes_enc.c\
./aes_decrypt/not-optimized/decrypt.xml\
./aes_decrypt/not-optimized/aes.c\
./aes_decrypt/not-optimized/aes_func.c \
5SGXEA7N2F45C1_02.5_donotexploseglobals_alignedaccess.sh \
5SGXEA7N2F45C1_custom.sh \
all.sh \
xc7vx690t-3ffg1930-VVD_02.5_donotexploseglobals_alignedaccess.sh \
xc7vx690t-3ffg1930-VVD_custom.sh \
hls_study_5SGXEA7N2F45C1_02.5_donotexploseglobals_alignedaccess.tex \
hls_study_5SGXEA7N2F45C1_custom.tex \
hls_study_xc7vx690t-3ffg1930-VVD_02.5_donotexploseglobals_alignedaccess.tex \
hls_study_xc7vx690t-3ffg1930-VVD_custom.tex
