EXTRA_DIST = btn_ctrl.c btn_ctrl.h btn_ctrl.v constraints_STD.xml COPYING IPs.xml led_example.c leds_ctrl.c leds_ctrl.h leds_ctrl.v Nexys4_Master.sdc program_NEXYS4.sh program_nexys4.tcl sevensegments_ctrl.c sevensegments_ctrl.h sevensegments_ctrl.v sw_ctrl.c sw_ctrl.h sw_ctrl.v synthesize_NEXYS4.sh README.txt

TESTS=synthesize_NEXYS4.sh

#do not touch the following line


