EXTRA_DIST = \
latex_format_bambu_results_simulate.xml \
latex_format_bambu_results.xml \
empty.c \
libm_list \
libm-tests_list_synth\
README.txt\
5CSEMA5F31C6_06.6_OSF_sdc_flopoco.sh\
5CSEMA5F31C6_06.6_OSF_sdc.sh\
5CSEMA5F31C6_07.5_OSF_sdc_no_proxy.sh\
5CSEMA5F31C6_10.0_OSF_sdc_flopoco.sh\
5CSEMA5F31C6_10.0_OSF_sdc.sh\
5SGXEA7N2F45C1_03.3_OSF_sdc_flopoco.sh\
5SGXEA7N2F45C1_03.3_OSF_sdc.sh\
5SGXEA7N2F45C1_05.0_OSF_sdc.sh\
5SGXEA7N2F45C1_10.0_OSF_sdc_flopoco.sh\
5SGXEA7N2F45C1_10.0_OSF_sdc.sh\
all.sh\
altera.sh\
EP2C70F896C6-R_10.0_OSF_sdc_flopoco.sh\
EP2C70F896C6-R_10.0_OSF_sdc.sh\
EP2C70F896C6-R_10.0_OSF.sh\
lattice.sh\
LFE335EA8FN484C_10.0_OSF_sdc.sh\
LFE335EA8FN484C_10.0_OSF_sdc_flopoco.sh\
xc7vx330t-1ffg1157_10.0_OSF_sdc_flopoco.sh\
xc7vx330t-1ffg1157_10.0_OSF_sdc.sh\
xc7vx690t-3ffg1930-VVD_02.5_OSF_sdc_flopoco.sh\
xc7vx690t-3ffg1930-VVD_02.5_OSF_sdc.sh\
xc7vx690t-3ffg1930-VVD_05.0_OSF_sdc.sh\
xc7vx690t-3ffg1930-VVD_10.0_OSF_sdc_flopoco.sh\
xc7vx690t-3ffg1930-VVD_10.0_OSF_sdc.sh\
xc7z020-1clg484-VVD_05.0_OSF_sdc_flopoco.sh\
xc7z020-1clg484-VVD_05.0_OSF_sdc.sh\
xc7z020-1clg484-VVD_06.6_OSF_sdc_no_proxy.sh\
xc7z020-1clg484-VVD_10.0_OSF_registered.sh\
xc7z020-1clg484-VVD_10.0_OSF_sdc_flopoco.sh\
xc7z020-1clg484-VVD_10.0_OSF_sdc.sh\
xc7z020-1clg484-VVD_10.0_OSF.sh\
xilinx_ISE.sh \
xilinx_VVD.sh \
libm_5CSEMA5F31C6_06.6_OSF_sdc.tex \
libm_5CSEMA5F31C6_06.6_OSF_sdc_flopoco.tex \
libm_5CSEMA5F31C6_10.0_OSF_sdc.tex \
libm_5CSEMA5F31C6_10.0_OSF_sdc_flopoco.tex \
libm_5SGXEA7N2F45C1_03.3_OSF_sdc.tex \
libm_5SGXEA7N2F45C1_03.3_OSF_sdc_flopoco.tex \
libm_5SGXEA7N2F45C1_10.0_OSF_sdc.tex \
libm_5SGXEA7N2F45C1_10.0_OSF_sdc_flopoco.tex \
libm_EP2C70F896C6-R_10.0_OSF_sdc.tex \
libm_EP2C70F896C6-R_10.0_OSF_sdc_flopoco.tex \
libm_xc7vx330t-1ffg1157_10.0_OSF_sdc.tex \
libm_xc7vx330t-1ffg1157_10.0_OSF_sdc_flopoco.tex \
libm_xc7vx690t-3ffg1930-VVD_02.5_OSF_sdc.tex \
libm_xc7vx690t-3ffg1930-VVD_02.5_OSF_sdc_flopoco.tex \
libm_xc7vx690t-3ffg1930-VVD_10.0_OSF_sdc.tex \
libm_xc7vx690t-3ffg1930-VVD_10.0_OSF_sdc_flopoco.tex \
libm_xc7z020-1clg484-VVD_05.0_OSF_sdc.tex \
libm_xc7z020-1clg484-VVD_05.0_OSF_sdc_flopoco.tex \
libm_xc7z020-1clg484-VVD_10.0_OSF_sdc.tex \
libm_xc7z020-1clg484-VVD_10.0_OSF_sdc_flopoco.tex\
libm_LFE335EA8FN484C_10.0_OSF_sdc.tex\
libm_LFE335EA8FN484C_10.0_OSF_sdc_flopoco.tex

#do not touch the following line
include $(top_srcdir)/panda.am
